--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -52,7 +52,8 @@
             },
             "import": {
                 "file": "Import File",
-                "notebook": "Import Notebook"
+                "notebook": "Import Notebook",
+                "pdf_epub": "PDF/EPUB Import"
             }
         }
     },
@@ -60,6 +61,18 @@
         "cancel": "Cancel",
         "empty_error": "Name cannot be empty",
         "submit": "Confirm"
+    },
+    "sidebar": {
+        "debug": "Debug",
+        "extensions": "Extensions",
+        "favorites": "Favorites",
+        "filter": "Filter",
+        "language": "Language",
+        "made_by": "Made by RedTTG",
+        "my_files": "My Files",
+        "settings": "Settings",
+        "tags": "Tags",
+        "trash": "Trash"
     },
     "quit": {
         "quitting": "Quitting... Please wait for data to save",
