--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -72,8 +72,7 @@
         "filter": "Filter",
         "language": "Language",
         "made_by": "Made by RedTTG",
-        "settings": "Settings",
-        "trash": "Trash"
+        "settings": "Settings"
     },
     "quit": {
         "quitting": "Quitting... Please wait for data to save",
