Add translation for offline mode

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -33,6 +33,7 @@
         "top": {
             "import": "Import",
             "menu": "Menu",
+            "offline": "You are offline!",
             "create": {
                 "folder": "Create Folder",
                 "notebook": "Create Notebook"
